--- a/src/css/parts/colors.less
+++ b/src/css/parts/colors.less
@@ -12,3 +12,8 @@
 @black: #232323;
 @blue: #4d606f;
 @learn-bg: f3f2f2;
+@acf: #2d2d32;
+@full-time: #ce0e16;
+@descript: #707070;
+@form-but-grad1: #222222;
+@form-but-grad2: #323232;
