--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -3,6 +3,7 @@ include includes/header
 include includes/reservation
 include includes/guarantie
 include includes/utp
+include includes/type-learn
 include includes/footer
 include includes/scripts
 include includes/mixins
@@ -26,6 +27,7 @@ html(lang="en")
 
             +utp()
 
+            +type-learn()
 
         footer
             +footer()
