--- a/src/css/parts/colors.less
+++ b/src/css/parts/colors.less
@@ -11,9 +11,19 @@
 @orange: #ffba00;
 @black: #232323;
 @blue: #4d606f;
-@learn-bg: f3f2f2;
+@learn-bg: #f3f2f2;
 @acf: #2d2d32;
 @full-time: #ce0e16;
 @descript: #707070;
 @form-but-grad1: #222222;
 @form-but-grad2: #323232;
+@border-title: #d92b2c;
+@border-review: #507299;
+@review-but-1: #374f6a;
+@review-but-2: #3f5976;
+@review-but-3: #5c81ac;
+@star: #ffde00;
+@causes-list: #384b5a;
+@causes-desc: #e3e5e6;
+@link-border: #498925;
+@link-no_active: #7dc455;
