--- a/src/templates/includes/scripts.jade
+++ b/src/templates/includes/scripts.jade
@@ -2,6 +2,6 @@ mixin scripts()
    script(src="http://code.jquery.com/jquery-2.1.4.min.js")
    script(type='text/javascript')   window.jQuery || document.write('<script src="../js/jquery-2.1.4.min.js"><\/script>');
    script(src="../js/libs/bootstrap/bootstrap.min.js")
-   script(src="../js/libs/slick/slick.min.js")
+   script(src="../js/libs/swiper/swiper.min.js")
    script(src="../js/libs/fancybox/jquery.fancybox.pack.js")
    script(src="../js/script.js")
