--- a/src/templates/includes/type-learn.jade
+++ b/src/templates/includes/type-learn.jade
@@ -8,6 +8,11 @@ mixin type-learn()
                   |  обучение
                .description
                  p   Наша автошкола в Тамбове предлагает всем желающим научиться красиво и правильно ездить, профессиональное обучение вождению транспортных средств  по категориям "A", "A1" и "B".
+                 .description__img
+                    img(src="../img/u.jpg")
+                    img(src="../img/u.jpg")
+                    img(src="../img/u.jpg")
+                    img(src="../img/u.jpg")
                  a(href="javascript:void(0)")   Записаться
                   +svg('arrow')
             .col-md-6
@@ -21,3 +26,5 @@ mixin type-learn()
                      li Обучение везде
                      li Нет пропусков
                      li Обучение в удобное для Вас время
+                  a(href="javascript:void(0)")   Записаться
+                     +svg('arrow')
