--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -4,6 +4,11 @@ include includes/reservation
 include includes/guarantie
 include includes/utp
 include includes/type-learn
+include includes/index-text
+include includes/reviews
+include includes/causes
+include includes/gallery
+include includes/scheme
 include includes/footer
 include includes/scripts
 include includes/mixins
@@ -28,6 +33,16 @@ html(lang="en")
             +utp()
 
             +type-learn()
+
+            +index-text()
+
+            +reviews()
+
+            +causes()
+
+            +gallery()
+
+            +scheme()
 
         footer
             +footer()
