--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -4,7 +4,7 @@ mixin head(title)
     title   #{title}
     link(rel="stylesheet",href="../css/normalize.css")
     link(rel="stylesheet",href="../css/libs/bootstrap/bootstrap.min.css")
-    link(rel="stylesheet",href="../css/libs/slick/slick.css")
+    link(rel="stylesheet",href="../css/libs/swiper/swiper.min.css")
     link(rel="stylesheet",href="../css/libs/jquery-ui/jquery-ui.css")
     link(rel="stylesheet",href="../css/libs/fancybox/jquery.fancybox.css")
     link(rel="stylesheet",href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&subset=cyrillic")
