--- a/src/css/parts/colors.less
+++ b/src/css/parts/colors.less
@@ -27,3 +27,7 @@
 @causes-desc: #e3e5e6;
 @link-border: #498925;
 @link-no_active: #7dc455;
+@grad-line: #4e9426;
+@grad-line-phone: #293721;
+@footer-a: #ffa200;
+@footer-phone: #ffa200;
