--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -11,3 +11,4 @@ mixin head(title)
     link(rel="stylesheet",href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&subset=cyrillic")
     link(rel="stylesheet",href="../css/style.css")
     script(src="../js/modernizr.custom.js")
+    script(src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript")
