--- a/src/templates/includes/scheme.jade
+++ b/src/templates/includes/scheme.jade
@@ -5,6 +5,7 @@ mixin scheme()
             .col-md-12
                p.title-block Схема обучения
          .scheme__list
+            .scheme__back
             .item
                .scheme__ico
                   .number  1
