--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -9,6 +9,9 @@ include includes/reviews
 include includes/causes
 include includes/gallery
 include includes/scheme
+include includes/block-text
+include includes/gradient-line
+include includes/map
 include includes/footer
 include includes/scripts
 include includes/mixins
@@ -43,6 +46,12 @@ html(lang="en")
             +gallery()
 
             +scheme()
+
+            +block-text()
+
+            +gradient-line()
+
+            +map()
 
         footer
             +footer()
