index page PC 100%

--- a/src/css/parts/colors.less
+++ b/src/css/parts/colors.less
@@ -15,6 +15,7 @@
 @acf: #2d2d32;
 @full-time: #ce0e16;
 @descript: #707070;
+@descript: #707070;
 @form-but-grad1: #222222;
 @form-but-grad2: #323232;
 @border-title: #d92b2c;
@@ -31,3 +32,5 @@
 @grad-line-phone: #293721;
 @footer-a: #ffa200;
 @footer-phone: #ffa200;
+@developer-bg: #1e1e21;
+@copyright: #a29d9d;
