--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -12,6 +12,7 @@ include includes/scheme
 include includes/block-text
 include includes/gradient-line
 include includes/map
+include includes/developer
 include includes/footer
 include includes/scripts
 include includes/mixins
@@ -55,4 +56,6 @@ html(lang="en")
 
         footer
             +footer()
+
+        +developer()
         +scripts()
