--- a/src/templates/includes/footer.jade
+++ b/src/templates/includes/footer.jade
@@ -1,3 +1,5 @@
+include developer
+
 mixin footer()
     .container
         .row
@@ -28,7 +30,6 @@ mixin footer()
                     span    Мы в соц. сетях
                     a(href="javascript:void(0)")
                         +svg('vk')
-
 
 
 
