--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -1,7 +1,7 @@
 include menu
 
-mixin header(type)
-   header(class="#{type}")
+mixin header()
+   header
       .container
          .row
             .col-md-3
