--- a/src/css/parts/colors.less
+++ b/src/css/parts/colors.less
@@ -34,3 +34,16 @@
 @footer-phone: #ffa200;
 @developer-bg: #1e1e21;
 @copyright: #a29d9d;
+@home-crumb: #767676;
+@h2-color: #3f4045;
+@page-p: #5d5d5d;
+@classes-bg: #ebebeb;
+@color-date: #979797;
+@introtext: #4e4e53;
+@phone-contact: #636363;
+@table-td_even: #4d9028;
+@table-td_odd: #57a22d;
+@table-td_body: #f3f3f3;
+@dark: #000;
+@table-nth: #e8e8e8;
+@table-td: #d7d7d7;
