--- a/src/css/parts/mixins.less
+++ b/src/css/parts/mixins.less
@@ -1,109 +1,50 @@
-.title-category(@width: 232px;@padding-b: 10px;) {
+.data() {
+	.item-data {
+		padding-top: 19px;
+		padding-left: 7px;
+		padding-right: 7px;
 
-	p.title-category {
-		position: relative;
-		padding-bottom: @padding-b;
-		margin-bottom: 21px;
-		font: 24px/24px @regular;
-		color: @utpTitle;
-		text-transform: uppercase;
-
-		&::before {
-			position: absolute;
-			left: 0;
-			bottom: 0;
-			display: block;
-			width: @width;
-			height: 1px;
-			background-color: @categoryTitleLine;
-			content: '';
-		}
-	}
-}
-
-.category-title() {
-	margin-bottom: 34px;
-	font: 18px/24px @semibold;
-	color: @h1;
-	text-transform: uppercase;
-}
-
-.param-style(@margin_b: 15px) {
-	margin-bottom: @margin_b;
-	font: 14px/24px @regular;
-	color: @param;
-
-	span {
-		color: @titleManuf;
-	}
-}
-
-.text-pages() {
-	&__description {
-		-moz-column-count: 2;
-		-webkit-column-count: 2;
-		column-count: 2;
-		-moz-column-gap: 3em;
-		-webkit-column-gap: 3em;
-		column-gap: 3em;
-
-		.logo {
-			width: 231px;
-		}
-
-		h1 {
-			font: 18px/24px @semibold;
-			color: @h1;
-		}
-
-		h2 {
-			margin-top: 0;
+		p {
 			margin-bottom: 0;
-			font: 18px/24px @semibold;
-			color: @h1;
-			text-transform: uppercase;
-		}
 
-		p {
-			font: 14px/24px @semibold;
-			color: @p;
-		}
+			&.title {
+				font-size: 25px;
+				line-height: 31px;
+				color: @h2-color;
+			}
 
-		span.bold {
-			color: @spanBold;
-		}
-	}
-}
+			&.date {
+				margin-top: 15px;
+				padding-left: 30px;
+				font-size: 13px;
+				font-weight: 600;
+				color: @color-date;
+				background-image: url(../img/calendar.svg);
+				background-size: 15px 15px;
+				background-position: left center;
+				background-repeat: no-repeat;
+			}
 
-.recommend-banner() {
-	&.new {
-		margin-top: 0;
-
-		p {
-			background-color: @ui-slider-handle;
-		}
-	}
-
-	&.hit {
-
-		p {
-			background-color: @yellow;
+			&.introtext {
+				margin-top: 8px;
+				font-size: 15px;
+				line-height: 22px;
+				color: @introtext;
+			}
 		}
 	}
 
-	&.recom  {
-
-		p {
-			background-color: @pink;
-		}
-	}
-
-	p {
-		margin-bottom: 0;
-		padding: 0 16px;
-		font: 12px/17px @semibold;
+	a.more {
+		margin-top: 35px;
+		padding-top: 2px;
+		display: block;
+		box-sizing: border-box;
+		width: 164px;
+		height: 27px;
+		font-size: 15px;
+		line-height: 22px;
+		text-align: center;
 		color: @white;
-		text-transform: uppercase;
-		border-radius: 20px;
+		background-color: @full-time;
 	}
 }
