--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -25,7 +25,7 @@ html(lang="en")
         include blocks/svg.html
 
         // Шапка сайта
-        +header('index')
+        +header()
         //
 
         .content
